service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-mlops-service # ✅ Name of the Service
spec:
  selector:
    app: fastapi-mlops # ✅ Selects Pods with this label (same as in deployment.yaml)
  ports:
    - protocol: TCP
      port: 80 # ✅ External port (clients use this)
      targetPort: 8000 # ✅ The port inside the Pod (FastAPI app)
  type: LoadBalancer  # ✅ Exposes external IP
